# fastapi-01

./: README.md  environment.yml  pyproject.toml
app/: main.py
app/schema/: student.py
